Tue Jun 26 10:44:13 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-netbsd.c (gsl_ieee_set_mode): simplified, patch from Jason Beegan

	* fp-openbsd.c (gsl_ieee_set_mode): simplified

Mon Jun 25 20:47:33 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-openbsd.c (gsl_ieee_set_mode): added support for openbsd

Tue May  8 10:49:58 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-aix.c: changed macros from TRAP_ to TRP_..

Fri Apr 13 15:07:10 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-darwin.c: added darwin support from Rodney Sparapani

Wed Mar 28 13:12:20 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-netbsd.c: added netbsd support from Jason Beegan
 	<jasontd@indigo.ie>

Thu Mar 15 14:11:29 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-hpux11.c: added support for HPUX11

Fri Mar  2 16:58:36 2001  Brian Gough  <bjg@network-theory.co.uk>

	* fp-os2emx.c: add ieee support for OS/2 from Henry Sobotka
 	<sobotka@axess.com>

Thu Jul 20 19:41:56 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-freebsd.c (gsl_ieee_set_mode): added fp-freebsd.c from
 	Vladimir Kushnir

Mon Jun 12 19:23:53 2000  Brian Gough  <bjg@network-theory.co.uk>

	* Makefile.am (noinst_HEADERS): added aix and irix to makefile

	* fp-x86linux.c (gsl_ieee_set_mode): Handle libc5, where
 	_FPU_SETCW is not available, by defining the macro. Suggested by
 	OKUJI Yoshinori <okuji@gnu.org>

Wed Jun  7 19:18:15 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-ppclinux.c: added support for ppc linux 

Tue Jun  6 19:59:50 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-x86linux.c: renamed from fp-linux.c

Thu May 18 11:53:13 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: turned off tests for denormals on irix, since they are
 	supported

	* fp.c: added IRIX and AIX to the top-level fp.c file -- somehow
 	they had been forgotten!

2000-05-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fp-tru64.c: include `/usr/include/float.h', if necessary for