@@ -1,3 +1,7 @@
+Tue Jul 10 13:10:12 2001  Brian Gough  <bjg@network-theory.co.uk>
+
+	* env.c (gsl_ieee_env_setup): send GSL_IEEE_MODE output to stderr
+
 Tue Jun 26 10:44:13 2001  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fp-netbsd.c (gsl_ieee_set_mode): simplified, patch from Jason Beegan
